nohup.out
  File "/Users/pronav/crewai_workflow/main.py", line 50
    ?n {"error": str(e)}
    ^
SyntaxError: expected 'except' or 'finally' block
  File "/Users/pronav/crewai_workflow/main.py", line 50
    ?n {"error": str(e)}
    ^
SyntaxError: expected 'except' or 'finally' block
